--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -59,6 +59,23 @@
   transition: 0.3s;
 }
 
+.icon {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: steelblue;
+  z-index: var(--z-modal);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
 .services__modal-content {
   width: 500px;
   position: relative;
