--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -27,6 +27,7 @@
 .home__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-0-25);
+  background-color: red;
 }
 
 .home__hand {
