--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -181,6 +181,11 @@
 
   .home__data {
     grid-column: 1/3;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    background-color: red; */
   }
 
   .home__img {
