--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -21,7 +21,7 @@
   justify-content: space-between;
   align-items: center;
   column-gap: 1rem;
-  background-color: rgb(235, 248, 253);
+  background-color: rgba(219, 219, 219, 0.24);
   padding: 0.25rem;
   border-radius: 10px;
 }
